--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,10 +12,10 @@
               <a href="#cloud_service" target="_self">Cloud Services</a>
             </li>
             <li><a href="about">About us</a></li>
-            <li><a href="">Login</a></li>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="poc">Poc</a></li>
+            <li><a href="https://www.sankir.com/my-account/">Login</a></li>
+            <li><a href="faq">FAQ</a></li>
+            <li><a href="https://www.sankir.com/blog/">Blog</a></li>
+            <li><a href="#poc">Poc</a></li>
           </ul>
         </div>
       </div>
@@ -74,7 +74,7 @@
 
       <li>
         <a
-          href="poc"
+          href="https://www.sankir.com/my-account/"
           [ngClass]="{manuicons}"
           (click)="show()"
           (click)="showmenu()"
@@ -83,7 +83,7 @@
       </li>
       <li>
         <a
-          href="about"
+          href="faq"
           [ngClass]="{manuicons}"
           (click)="show()"
           (click)="showmenu()"
@@ -92,7 +92,7 @@
       </li>
       <li>
         <a
-          href="about"
+          href="https://www.sankir.com/blog/"
           [ngClass]="{manuicons}"
           (click)="show()"
           (click)="showmenu()"
@@ -101,7 +101,7 @@
       </li>
       <li>
         <a
-          href="about"
+          href="#pocM"
           [ngClass]="{manuicons}"
           (click)="show()"
           (click)="showmenu()"
@@ -113,30 +113,41 @@
 
   <div class="bottom">
     <div class="add">
-      <i class="fa fa-clock-o"></i>
-      <h1>Monday-Friday</h1>
-      <h6>8 Am-9 Pm</h6>
-    </div>
-    <div class="add">
-      <i class="fa fa-map-marker"></i>
-      <h1>Location</h1>
-      <p>247, 3rd Stage, 3rd Block Basaveshwaranagar Bangalore – 560079</p>
-    </div>
-    <div class="add">
-      <i class="fa fa-search"></i>
-      <h1>Visit our Social Page</h1>
+      <h1>Contact us</h1>
+      <p>
+        Sanjay : sanjay@sankir.com <br />
+
+        Kiran : kiran@sankir.com<br />
+
+        Info: info@sankir.com<br />
+        Ph: 9620960030 / 9845031055
+      </p>
       <ul>
         <li>
-          <a href=""><i class="fa fa-facebook"></i></a>
+          <a href="https://www.facebook.com/sankirtech"
+            ><i class="fa fa-facebook"></i
+          ></a>
         </li>
         <li>
-          <a href=""><i class="fa fa-instagram"></i></a>
+          <a href="https://www.instagram.com/sankirtech/"
+            ><i class="fa fa-instagram"></i
+          ></a>
         </li>
         <li>
-          <a href=""><i class="fa fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/company/sankir/"
+            ><i class="fa fa-linkedin"></i
+          ></a>
         </li>
         <li>
-          <a href=""><i class="fa fa-youtube"></i></a>
+          <a href="https://www.linkedin.com/company/sankir/"
+            ><i class="fa fa-meetup"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/channel/UC7a7WWT9kiKwjWMSZDT2DQg/videos"
+            ><i class="fa fa-youtube"></i
+          ></a>
         </li>
       </ul>
     </div>
