--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,6 +25,10 @@
               <li>{{ nast.name }}</li>
             </ul>
           </ul>
+          <h2>
+            Consultancy, Conceptualization, Asset & Solution Development on Data
+            Platforms
+          </h2>
         </div>
         <div class="social_media">
           <a href="https://github.com/kiranhm1972">
