all component update

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,16 +28,30 @@
         </ul>
         <ul class="social_media">
           <li>
-            <a href=""><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/sankirtech"
+              ><i class="fa fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/sankir"
+              ><i class="fa fa-linkedin"></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fa fa-instagram"></i></a>
+            <a href="https://www.instagram.com/sankirtech/"
+              ><i class="fa fa-instagram"></i
+            ></a>
           </li>
           <li>
-            <a href=""><i class="fa fa-youtube"></i></a>
+            <a
+              href="https://www.youtube.com/channel/UC7a7WWT9kiKwjWMSZDT2DQg/videos"
+              ><i class="fa fa-youtube"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.meetup.com/Sankir-big-data-group/"
+              ><i class="fa fa-meetup"></i
+            ></a>
           </li>
         </ul>
       </div>
