--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -102,10 +102,10 @@
           position: absolute;
           content: "";
           top: 2em;
-          left: 8em;
+          left: 12.8em;
           background-color: $primary-background-color;
           border-left: 0;
-          width: 50%;
+          width: 22%;
           height: 3px;
         }
       }
@@ -121,6 +121,12 @@
       .service_box {
         box-shadow: 0 0 10px -2px #00000036;
         width: 100%;
+        .body-cont {
+          overflow: hidden;
+          height: 300px;
+          overflow-y: scroll;
+          margin-bottom: 2rem;
+        }
         .first,
         h2 {
           background: linear-gradient(
@@ -238,11 +244,14 @@
           display: grid;
           grid-template-columns: 1fr 1fr 1fr 1fr;
           justify-items: center;
-          align-items: stretch;
+          align-items: flex-start;
           column-gap: 2rem;
           padding: 2rem 1rem;
           background-color: $primary-color-white;
-
+          width: 100%;
+          .video {
+            width: 100%;
+          }
           .doc {
             a {
               background-color: $primary-background-color;
@@ -440,7 +449,6 @@
   }
   .body_layout {
     .iteams {
-      padding-top: 2rem;
       .card {
         height: 600px;
         overflow: hidden;
@@ -480,7 +488,519 @@
   }
 }
 //  ========================== Data_service ENd ========================== //
+@media screen and (max-width: 1300px) {
+  // ========================== Banner Start ========================== //
+  .banner {
+    .carousel-item {
+      padding: 19rem;
+      .carousel-caption {
+        .info {
+          img {
+            width: 50%;
+          }
+          h5 {
+            font-size: 3rem;
+          }
+        }
+      }
+    }
+  }
+  // ========================== Banner End ========================== //
 
+  // ========================== Hero_wrap Start ========================== //
+  .hero_wrap {
+    // ======= Architecture Start ======= //
+    .Architecture {
+      .head {
+        text-align: center;
+
+        h1 {
+          padding: 1rem 0;
+          &::after {
+            left: 8.9em;
+            width: 25%;
+          }
+        }
+      }
+
+      .body_layout {
+        column-gap: 5rem;
+        .service_box {
+          .body-cont {
+            height: 300px;
+            overflow: hidden;
+            overflow-y: scroll;
+            margin-bottom: 2rem;
+          }
+          .first,
+          h2 {
+            font-size: 1.2rem;
+          }
+
+          ul {
+            li {
+              font-size: 0.9rem;
+            }
+          }
+        }
+      }
+
+      /* for product */
+    }
+
+    // ======= Architecture End ======= //
+
+    // ======= Client Start ======= //
+    .clients {
+      background-color: #000c662a;
+      padding: 3rem;
+      .head {
+        line-height: 34px;
+        margin-bottom: 3rem;
+
+        h1 {
+          font-size: 2rem;
+          &::after {
+            left: 9em;
+
+            width: 38%;
+            height: 3px;
+          }
+        }
+      }
+      .body_layout {
+        .heads {
+          padding: 2rem 1rem;
+          column-gap: 2rem;
+
+          h1 {
+            font-size: 1.2rem;
+            color: $primary-color-white;
+          }
+        }
+        .body_info {
+          background-color: $primary-color-white;
+          .items {
+            column-gap: 1rem;
+            padding: 1rem 0.5rem;
+
+            .video {
+              width: 100%;
+            }
+            .doc {
+              width: 100%;
+              a {
+                padding: 1rem 0.7rem;
+                font-size: 0.8rem;
+              }
+            }
+            h1 {
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
+
+    // ======= Client End ======= //
+  }
+  // ========================== Hero_wrap end ========================== //
+
+  // ========================== Cloud_service Start ========================== //
+  .cloud_service_solutions {
+    padding: 3rem 5rem 5rem;
+    background-color: $primary-color-white;
+    // border-bottom-right-radius: 200px;
+    // border-top-left-radius: 200px;
+
+    .head {
+      line-height: 34px;
+      margin-bottom: 3rem;
+
+      h1 {
+        font-size: 2rem;
+        &::after {
+          left: 7.2em;
+
+          width: 50%;
+          height: 3px;
+        }
+      }
+    }
+    .body_layout {
+      column-gap: 1rem;
+      .itames {
+        padding-top: 2rem;
+        .card {
+          height: 400px;
+          overflow: hidden;
+          border-radius: 0;
+          .heads {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+            padding: 1rem;
+
+            h1 {
+              font-size: 1.7rem;
+            }
+          }
+          .card-body {
+            margin: 1rem 0;
+            overflow-y: scroll;
+            ul {
+              li {
+                font-size: 0.9rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .cloud_service_solutions_mobile {
+    display: none;
+    padding: 3rem 5rem 5rem;
+    .head {
+      padding-bottom: 2rem;
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: $primary-color-white;
+        letter-spacing: 0;
+        text-align: center;
+      }
+    }
+    .body_layout {
+      .iteams {
+        padding-top: 2rem;
+        .card {
+          height: 600px;
+          overflow: hidden;
+          border-radius: 0;
+          border: none;
+          box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+
+          .heads {
+            @include card_head;
+          }
+          .card-body {
+            overflow-y: scroll;
+            ul {
+              @include card_list;
+            }
+          }
+        }
+      }
+    }
+  }
+  // ========================== Cloud_service End ========================== //
+
+  //  ========================== Data_service Start ========================== //
+  .data_engineer_solution {
+    background-color: #000c662a;
+    padding: 3rem 5rem 5rem;
+    .head {
+      line-height: 34px;
+      margin-bottom: 3rem;
+
+      h1 {
+        font-size: 2rem;
+        &::after {
+          left: 7.2em;
+
+          width: 50%;
+          height: 3px;
+        }
+      }
+    }
+    .body_layout {
+      .iteams {
+        .card {
+          height: 400px;
+
+          .heads {
+            border-bottom-left-radius: 0%;
+            border-bottom-right-radius: 0%;
+            padding: 1rem;
+            h1 {
+              font-size: 1.5rem;
+            }
+          }
+          .card-body {
+            overflow-y: scroll;
+            margin: 1rem 0;
+            ul {
+              li {
+                font-size: 0.9rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  //  ========================== Data_service ENd ========================== //
+}
+
+@media screen and (max-width: 1199px) {
+  // ========================== Banner Start ========================== //
+  .banner {
+    .carousel-item {
+      padding: 19rem;
+      .carousel-caption {
+        .info {
+          img {
+            width: 50%;
+          }
+          h5 {
+            font-size: 3rem;
+          }
+        }
+      }
+    }
+  }
+  // ========================== Banner End ========================== //
+
+  // ========================== Hero_wrap Start ========================== //
+  .hero_wrap {
+    // ======= Architecture Start ======= //
+    .Architecture {
+      .head {
+        text-align: center;
+
+        h1 {
+          padding: 1rem 0;
+          &::after {
+            left: 8.9em;
+            width: 25%;
+          }
+        }
+      }
+
+      .body_layout {
+        column-gap: 5rem;
+        .service_box {
+          .body-cont {
+            height: 300px;
+            overflow: hidden;
+            overflow-y: scroll;
+            margin-bottom: 2rem;
+          }
+          .first,
+          h2 {
+            font-size: 1.2rem;
+          }
+
+          ul {
+            li {
+              font-size: 0.9rem;
+            }
+          }
+        }
+      }
+
+      /* for product */
+    }
+
+    // ======= Architecture End ======= //
+
+    // ======= Client Start ======= //
+    .clients {
+      background-color: #000c662a;
+      padding: 3rem;
+      .head {
+        line-height: 34px;
+        margin-bottom: 3rem;
+
+        h1 {
+          font-size: 2rem;
+          &::after {
+            left: 9em;
+
+            width: 38%;
+            height: 3px;
+          }
+        }
+      }
+      .body_layout {
+        .heads {
+          padding: 2rem 1rem;
+          column-gap: 2rem;
+
+          h1 {
+            font-size: 1.2rem;
+            color: $primary-color-white;
+          }
+        }
+        .body_info {
+          background-color: $primary-color-white;
+          .items {
+            column-gap: 1rem;
+            padding: 1rem 0.5rem;
+
+            .video {
+              width: 100%;
+            }
+            .doc {
+              width: 100%;
+              a {
+                padding: 1rem 0.7rem;
+                font-size: 0.8rem;
+              }
+            }
+            h1 {
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
+
+    // ======= Client End ======= //
+  }
+  // ========================== Hero_wrap end ========================== //
+
+  // ========================== Cloud_service Start ========================== //
+  .cloud_service_solutions {
+    padding: 3rem 5rem 5rem;
+    background-color: $primary-color-white;
+    // border-bottom-right-radius: 200px;
+    // border-top-left-radius: 200px;
+
+    .head {
+      line-height: 34px;
+      margin-bottom: 3rem;
+
+      h1 {
+        font-size: 2rem;
+        &::after {
+          left: 7.2em;
+
+          width: 50%;
+          height: 3px;
+        }
+      }
+    }
+    .body_layout {
+      column-gap: 1rem;
+      .itames {
+        padding-top: 2rem;
+        .card {
+          height: 400px;
+          overflow: hidden;
+          border-radius: 0;
+          .heads {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+            padding: 1rem;
+
+            h1 {
+              font-size: 1.7rem;
+            }
+          }
+          .card-body {
+            margin: 1rem 0;
+            overflow-y: scroll;
+            ul {
+              li {
+                font-size: 0.9rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .cloud_service_solutions_mobile {
+    display: none;
+    padding: 3rem 5rem 5rem;
+    .head {
+      padding-bottom: 2rem;
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: $primary-color-white;
+        letter-spacing: 0;
+        text-align: center;
+      }
+    }
+    .body_layout {
+      .iteams {
+        padding-top: 2rem;
+        .card {
+          height: 600px;
+          overflow: hidden;
+          border-radius: 0;
+          border: none;
+          box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+
+          .heads {
+            @include card_head;
+          }
+          .card-body {
+            overflow-y: scroll;
+            ul {
+              @include card_list;
+            }
+          }
+        }
+      }
+    }
+  }
+  // ========================== Cloud_service End ========================== //
+
+  //  ========================== Data_service Start ========================== //
+  .data_engineer_solution {
+    background-color: #000c662a;
+    padding: 3rem 5rem 5rem;
+    .head {
+      line-height: 34px;
+      margin-bottom: 3rem;
+
+      h1 {
+        font-size: 2rem;
+        &::after {
+          left: 7.2em;
+
+          width: 50%;
+          height: 3px;
+        }
+      }
+    }
+    .body_layout {
+      .iteams {
+        .card {
+          height: 400px;
+
+          .heads {
+            border-bottom-left-radius: 0%;
+            border-bottom-right-radius: 0%;
+
+            h1 {
+              font-size: 1.5rem;
+            }
+          }
+          .card-body {
+            overflow-y: scroll;
+            margin: 1rem 0;
+            ul {
+              li {
+                font-size: 0.9rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  //  ========================== Data_service ENd ========================== //
+}
 // Responsive Start
 @media screen and (max-width: 991px) {
   // ========================== Banner Start ========================== //
@@ -563,14 +1083,7 @@
           position: relative;
 
           &::after {
-            position: absolute;
-            content: "";
-            top: 2em;
-            left: 8em;
-            background-color: $primary-background-color;
-            border-left: 0;
-            width: 50%;
-            height: 3px;
+            display: none;
           }
         }
       }
@@ -580,11 +1093,14 @@
         grid-template-columns: repeat(2, 1fr);
         align-items: stretch;
         justify-items: center;
-        column-gap: 10rem;
+        column-gap: 5em;
 
         .service_box {
           box-shadow: 0 0 10px -2px #00000036;
           width: 100%;
+          .body-cont {
+            height: 250px;
+          }
           .first,
           h2 {
             background: linear-gradient(
@@ -640,18 +1156,11 @@
             border-color: #196d78 transparent transparent #196d78;
           }
           ul {
-            margin: 1em 0;
             li {
               margin: 0.5em;
               margin-left: 3em;
               list-style: none;
-              &:before {
-                content: "\f006";
-                font-family: "FontAwesome";
-                float: left;
-                margin-left: -1.5em;
-                color: #0074d9;
-              }
+              font-size: 0.7rem;
             }
           }
         }
@@ -669,6 +1178,7 @@
     // ======= Client End ======= //
 
     .clients_mobile {
+      background-color: #000c6634;
       display: block;
       padding: 3rem 0;
       .head {
@@ -678,19 +1188,19 @@
           font-weight: 600;
           letter-spacing: 0.05px;
           text-align: center;
-          color: $primary-color-white;
+          color: $primary-background-color;
         }
       }
       .body_layout {
         .item {
-          background-color: #0985e386;
+          background-color: $primary-color-white;
           padding: 2rem;
           margin-bottom: 2rem;
           h1 {
             font-size: 1.7rem;
             font-weight: 500;
             letter-spacing: 0.05px;
-            color: $primary-color-white;
+            color: $primary-background-color;
             padding-bottom: 1rem;
           }
           iframe {
@@ -698,7 +1208,7 @@
           }
           .button {
             text-align: center;
-            background-color: #000c66;
+            background-color: $primary-background-color;
             width: 100%;
             border-radius: 50px;
             padding: 0.7rem;
@@ -717,6 +1227,7 @@
 
   // ========================== Cloud_service Start ========================== //
   .cloud_service_solutions {
+    display: none;
     padding: 3rem 5rem 5rem;
     background-color: $primary-color-white;
     // border-bottom-right-radius: 200px;
@@ -752,6 +1263,98 @@
     }
   }
   // ========================== Cloud_service End ========================== //
+  .cloud_service_solutions_mobile {
+    display: block;
+    padding: 2rem 3rem 5rem;
+
+    .head {
+      margin: 0 0 3rem;
+      padding: 0;
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 500;
+        color: $primary-background-color;
+        letter-spacing: 0;
+        text-align: center;
+        padding: 1rem 0;
+        position: relative;
+        font-size: 2rem;
+
+        &::after {
+          display: none;
+        }
+      }
+    }
+    .body_layout {
+      .itames {
+        width: 100%;
+        height: 380px;
+        overflow: hidden;
+        border-radius: 5px;
+        border: none;
+        box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+        // border: 1px solid #000c662d;
+        .card {
+          height: 100%;
+          border: none;
+          box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+          background-color: rgba(0, 12, 102, 0.2039215686);
+          padding-bottom: 1rem;
+          .heads {
+            @include card_head;
+          }
+          .card-body {
+            overflow-y: scroll;
+            scroll-behavior: smooth;
+            ul {
+              li {
+                margin: 0.5em;
+                margin-left: 3em;
+                list-style: none;
+                font-size: 0.8rem;
+                line-height: 1.2rem;
+                text-align: start;
+                &:before {
+                  content: "\f006";
+                  font-family: "FontAwesome";
+                  float: left;
+                  margin-left: -1.5em;
+                  color: $primary-background-color;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .data_engineer_solution {
+    background-color: #000c662a;
+    padding: 3rem 5rem 5rem;
+    .head {
+      min-height: 54px;
+      text-align: center;
+      line-height: 34px;
+      margin-bottom: 5rem;
+
+      h1 {
+        font-family: "Poppins", sans-serif;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-weight: 400;
+        color: $primary-background-color;
+        letter-spacing: 0;
+        text-align: center;
+        padding: 1rem 0;
+        position: relative;
+        &::after {
+          display: none;
+        }
+      }
+    }
+  }
 }
 @media screen and (max-width: 600px) {
   // ========================== Banner Start ========================== //
