--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,7 +99,41 @@ a {
   right: -38px;
   transform: translate(-50%, -50%);
 }
+@media screen and (min-width: 499px) {
+  .cloud_service_solutions_mobile .body_layout .owl-next,
+  .cloud_service_solutions_mobile .body_layout .owl-prev {
+    background-color: #000e9c9c !important;
+    color: #222 !important;
+    height: 60px !important;
+    width: 60px !important;
+    border-radius: 50% !important;
+    position: absolute;
+    top: 50%;
+  }
 
+  .cloud_service_solutions_mobile .body_layout .owl-next:hover,
+  .cloud_service_solutions_mobile .body_layout .owl-prev:hover {
+    background-color: $primary-background-color !important;
+  }
+  .cloud_service_solutions_mobile .body_layout .owl-next i,
+  .cloud_service_solutions_mobile .body_layout .owl-prev i {
+    font-size: 2rem !important;
+    font-weight: 600 !important;
+    color: $primary-color-white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .cloud_service_solutions_mobile .body_layout .owl-prev {
+    left: -8px;
+    transform: translate(-50%, -50%);
+  }
+  .cloud_service_solutions_mobile .body_layout .owl-next {
+    right: -68px;
+    transform: translate(-50%, -50%);
+  }
+}
 @media screen and (max-width: 500px) {
   .data_engineer_solution .body_layout .owl-next,
   .data_engineer_solution .body_layout .owl-prev {
