--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,14 +7,11 @@
           <li>
             <a href=""> Home </a>
           </li>
-          <li><a href="">About</a></li>
-          <li><a href="">My Account</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="https://www.sankir.com/my-account/">My Account</a></li>
           <li><a href="">Contact</a></li>
           <li>
             <a href="">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="">PoC</a>
           </li>
         </ul>
       </div>
