--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -191,7 +191,7 @@
     </div>
   </section>
 
-  <section class="clients_mobile" id="poc">
+  <section class="clients_mobile" id="pocM">
     <div class="container">
       <div class="head">
         <h1>PoCs</h1>
@@ -223,8 +223,7 @@
             ></iframe>
           </div>
           <div class="button">
-            <a
-              href="https://www.sankir.com/wp-content/uploads/2022/09/databricks-abfs-poc-README.pdf"
+            <a href="https://www.sankir.com/databricks-abfs-poc-readme/"
               >Databricks-POC-Readme</a
             >
           </div>
@@ -239,8 +238,7 @@
             ></iframe>
           </div>
           <div class="button">
-            <a
-              href="https://www.sankir.com/wp-content/uploads/2022/09/readme_poc_Airflow.pdf"
+            <a href="https://www.sankir.com/readme_poc_airflow/"
               >Airflow-POC-Readme</a
             >
           </div>
