--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -29,6 +29,10 @@
     .kiran_about {
       .content {
         padding-top: 3rem;
+        h2 {
+          font-size: 1.2rem;
+          padding: 1rem 0;
+        }
         h1 {
           font-size: 1.5rem;
           font-weight: 800;
