Add video in the data Course and about page add sankir about

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,12 +7,12 @@
 <section class="about_body">
   <div class="container">
     <div class="about_info">
-      <div class="image">
+      <!-- <div class="image">
         <img
           src="https://www.sankir.com/wp-content/uploads/2022/02/kiran_3c.jpg"
           alt=""
         />
-      </div>
+      </div> -->
       <div class="kiran_about">
         <div class="content" *ngFor="let info of selfInfo">
           <div class="profile_link">
@@ -25,10 +25,10 @@
               <li>{{ nast.name }}</li>
             </ul>
           </ul>
-          <h2>
+          <!-- <h2>
             Consultancy, Conceptualization, Asset & Solution Development on Data
             Platforms
-          </h2>
+          </h2> -->
         </div>
         <div class="social_media">
           <a href="https://github.com/kiranhm1972">
@@ -48,12 +48,12 @@
 <section class="about_body sanjay">
   <div class="container">
     <div class="about_info">
-      <div class="image">
+      <!-- <div class="image">
         <img
           src="https://www.sankir.com/wp-content/uploads/2022/02/sanjay_4d-150x150.png"
           alt=""
         />
-      </div>
+      </div> -->
       <div class="sanjay_about">
         <div class="content" *ngFor="let infos of sanjayselfInfo">
           <div class="profile_link">
@@ -81,5 +81,13 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+
+<section class="py-5 sm-py-2">
+  <div class="container">
+    <h1 class="py-3 text-center sm-fontsize-0.7 ">About Sankir</h1>
+    <img class="w-100" src="../../assets/aboutsankir.jpeg" alt="">
   </div>
 </section>
