--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,10 +18,11 @@
       <div class="items">
         <h1>contact us</h1>
         <ul>
-          <li><a href="">sanjay@sankir.com </a></li>
           <li><a href="">kiran@sankir.com </a></li>
+          <li><a href="">9845031055</a></li>
+          <li><a href="">sanjay@sankir.com </a></li>
+          <li><a href="">9620960030</a></li>
           <li><a href="">info@sankir.com </a></li>
-          <li><a href="">9620960030 / 9845031055</a></li>
         </ul>
         <ul class="social_media">
           <li>
