--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,9 +13,9 @@
             </li>
             <li><a href="about">About us</a></li>
             <li><a href="https://www.sankir.com/my-account/">Login</a></li>
-            <li><a href="faq">FAQ</a></li>
-            <li><a href="https://www.sankir.com/blog/">Blog</a></li>
-            <li><a href="#poc">Poc</a></li>
+            <!-- <li><a href="faq">FAQ</a></li> -->
+            <!-- <li><a href="https://www.sankir.com/blog/">Blog</a></li> -->
+            <li><a href="#poc">PoC</a></li>
           </ul>
         </div>
       </div>
@@ -81,7 +81,7 @@
           >Login</a
         >
       </li>
-      <li>
+      <!-- <li>
         <a
           href="faq"
           [ngClass]="{manuicons}"
@@ -89,8 +89,8 @@
           (click)="showmenu()"
           >FAQ</a
         >
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <a
           href="https://www.sankir.com/blog/"
           [ngClass]="{manuicons}"
@@ -98,14 +98,14 @@
           (click)="showmenu()"
           >Blog</a
         >
-      </li>
+      </li> -->
       <li>
         <a
           href="#pocM"
           [ngClass]="{manuicons}"
           (click)="show()"
           (click)="showmenu()"
-          >Poc</a
+          >PoC</a
         >
       </li>
     </ul>
