--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -113,7 +113,6 @@
     <div class="container">
       <div class="head">
         <h1>Accelerating Data Engineering Solution on Cloud</h1>
-      
           <a href="../../assets/SanKir-Capabilities-2_9.pdf" download
             >Download SanKir Capabilities Brochure</a
           >
@@ -170,25 +169,65 @@
         </div>
 
         <div class="body_info">
-          <div class="items" *ngFor="let client of clientTables">
-            <h1>{{ client.name }}</h1>
+          <div class="items" >
+            <h1>Orchestration using Airflow</h1>
             <ul>
-              <li *ngFor="let product of client.products">
-                {{ product.productsName }}
+              <li >
+                Dynamic DAGs
+              </li>
+              <li >
+                Schedule and monitoring of task-groups and tasks
               </li>
             </ul>
             <div class="video">
-              <iframe
-                [src]="safeUrl(client.video)"
-                width="292"
-                height="150"
-                frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+             
+              <iframe width="292" height="150" src="https://www.youtube.com/embed/LAVrZgiVJVY" title="Orchestration using Airflow" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="doc">
-              <a target="_blank" [href]="client.url" download>{{ client.image }}</a>
+              <a target="_blank" href="../../assets/readme_poc_Airflow.pdf" download>Airflow-POC-Readme</a>
+            </div>
+          </div>
+          <div class="items" >
+            <h1>Data Engineering using built-in and scalable Azure Databricks platform</h1>
+            <ul>
+              <li >
+                Infra creation ( Spark Cluster ) – compute sizing
+              </li>
+              <li >
+                Data Transformation, Best practice using Key vaults
+              </li>
+              <li >
+                Data Profiling – Column profile detail & Data quality metrics
+              </li> 
+            </ul>
+            <div class="video">
+             
+              <iframe width="292" height="150" src="https://www.youtube.com/embed/XdMwBtP6ilo" title="Data Engineering using built-in and scalable Azure Databricks platform" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="doc">
+              <a target="_blank" href="../../assets//databricks-abfs-poc-README.pdf" download>Databricks-POC-Readme</a>
+            </div>
+          </div> 
+           <div class="items" >
+            <h1>Loading retail data from AWS S3 file storage into Snowflake tables</h1>
+            <ul>
+              <li >
+                Loading data from AWS S3 files into Snowflake tables
+              </li>
+              <li >
+                Automate SQL actions like DDL & DML using SnowSQL
+              </li>
+              <li >
+                Creation of Snowflake Objects like Database, Warehouse and Table
+              </li>    <li >
+                Load data from S3 to Snowflake Tables using COPY INTO command
+              </li>
+            </ul>
+            <div class="video">
+             
+              <iframe width="292" height="150" src="https://www.youtube.com/embed/wbQsqI37fTY" title="Loading retail data from AWS S3 file storage into Snowflake tables" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
+            <div class="doc">
+              <a target="_blank" href="../../assets/snowflake-poc-README.pdf" download>Snowflake-POC-Readme</a>
             </div>
           </div>
         </div>
@@ -199,18 +238,13 @@
   <section class="clients_mobile" id="pocM">
     <div class="container">
       <div class="head">
-        <h1>PoCs</h1>
+        <h1>PoCs Done For Clients</h1>
       </div>
       <div class="body_layout">
         <div class="item">
           <h1>Snowflake POC</h1>
           <div class="video">
-            <iframe
-              src="https://player.vimeo.com/video/746053538?color&autopause=0&loop=0&muted=0&title=1&portrait=0&byline=1&h=35e05ea07a#t="
-              frameborder="0"
-              loading="lazy"
-              style="width: 100%"
-            ></iframe>
+            <iframe style="width: 100%" src="https://www.youtube.com/embed/wbQsqI37fTY" title="Loading retail data from AWS S3 file storage into Snowflake tables" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>           
           </div>
           <div class="button">
             <a href="../../assets/snowflake-poc-README.pdf" download
@@ -221,11 +255,7 @@
         <div class="item">
           <h1>Databricks POC</h1>
           <div class="video">
-            <iframe
-              src="https://player.vimeo.com/video/746319339?color&autopause=0&loop=0&muted=0&title=1&portrait=0&byline=1&h=8732b35cd1#t="
-              frameborder="0"
-              style="width: 100%"
-            ></iframe>
+            <iframe style="width: 100%" src="https://www.youtube.com/embed/XdMwBtP6ilo" title="Data Engineering using built-in and scalable Azure Databricks platform" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="button">
             <a href="../../assets//databricks-abfs-poc-README.pdf" download
@@ -236,11 +266,7 @@
         <div class="item">
           <h1>Airflow POC</h1>
           <div class="video">
-            <iframe
-              src="https://player.vimeo.com/video/747633649?color&autopause=0&loop=0&muted=0&title=1&portrait=0&byline=1&h=dd8c2698a0#t="
-              frameborder="0"
-              style="width: 100%"
-            ></iframe>
+           <iframe style="width: 100%" src="https://www.youtube.com/embed/LAVrZgiVJVY" title="Orchestration using Airflow" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
           <div class="button">
             <a href="../../assets/readme_poc_Airflow.pdf" download
@@ -525,99 +551,177 @@
   <div class="container">
     <div class="head">
       <h1>Data Engineering Courses for Corporate and IT Professionals</h1>
-      <p>* pro-Spark : Self paced online course on Data Engineering on Cloud </p>
-      <p>* Opportunity to experience a Data Engineering Project on Cloud  with hands-on approach</p>
-      <p>* Learn Distributed Computing using Apache Spark</p>
-      <p>* Create Data Pipeline on Cloud</p>
-      <p>* Explore Retail Data set in detail and define Key Performance Indicators </p>
-      <p>* Design and Implement Data Validation and Transformation using Apache Spark</p>
-      <p>* Download Project Code </p>
-      <p>* Test Build and Deploy Spark Application</p>
-      <p>* Become proficient in Data Engineering on Cloud</p>
-   
+      <ul>
+          <li *ngFor="let itme of heroList">{{itme.nameUl}}</li>
+      </ul>
+      <p> <strong>Please email to info@sankir.com for Course Fee details and Subscriptions. </strong> </p>
+      
+      <h6><strong> Free Lesson-1 Video :</strong></h6>
       <iframe class="w-100" height="600" src="https://www.youtube.com/embed/uudHxXc7XPo" title="pro-spark-aws. Data Engineering project on AWS  using Apache Spark/Scala" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     
-    <div class="body_layout">
-    
-       <div class="wrap">
-
-         <div class="iteams">
-           <div class="card">
-             <div class="heads">
-               <h1>pro-Spark-AWS</h1>
-             </div>
-             <div class="card-body">
-               <ul class="ul-item">
-                 <li>Develop connectors to Amazon S3, AWS EMR</li>
-                 <li>
-                   Design and implement EC 2 and RBAC using IAM
-                
-                 </li>
-                 <li>   Design Data Lake with Amazon S3
-                   
-                  </li>
-                 <li> Create AWS EMR Spark Cluster
-                   
-                   </li>
-                 <li>Query External Tables using Amazon Athena</li>
-               </ul>
-             </div>
-           </div>
-         </div>
-    
-         <div class="iteams">
-           <div class="card">
-             <div class="heads">
-               <h1>pro-Spark-GCP</h1>
-             </div>
-             <div class="card-body">
-               <ul>
-                 <li>Develop connectors to Google Cloud Storage, BigQuery, Dataproc</li>
-                 <li>
-                   Design and implement RBAC using Service Account creation in IAM
-                  </li>
-                 <li>
+        <div class="body_layout">
+          <div class="wrap">
+            <div class="iteams">
+              <div class="card">
+                <div class="heads">
+                  <h1>pro-Spark-AWS</h1>
+                </div>
+                <div class="card-body">
+                  <ul class="ul-item">
+                    <li>Develop connectors to Amazon S3, AWS EMR</li>
+                    <li>
+                      Design and implement EC 2 and RBAC using IAM
                     
-                   Design Data Lake with Google Cloud Storage
+                    </li>
+                    <li>   Design Data Lake with Amazon S3
+                      
+                      </li>
+                    <li> Create AWS EMR Spark Cluster
+                      
+                      </li>
+                    <li>Query External Tables using Amazon Athena</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+      
+            <div class="iteams">
+              <div class="card">
+                <div class="heads">
+                  <h1>pro-Spark-GCP</h1>
+                </div>
+                <div class="card-body">
+                  <ul>
+                    <li>Develop connectors to Google Cloud Storage, BigQuery, Dataproc</li>
+                    <li>
+                      Design and implement RBAC using Service Account creation in IAM
+                      </li>
+                    <li>
+                        
+                      Design Data Lake with Google Cloud Storage
+              
+                    </li>
+                    <li>          
+                      Create Google Dataproc Spark Cluster</li>
+                    <li>                     
+                      Query results in BigQuery Tables</li>
+                    
+                  </ul>
+                </div>
+              </div>
+            </div>
           
-                 </li>
-                 <li>          
-                   Create Google Dataproc Spark Cluster</li>
-                 <li>                     
-                   Query results in BigQuery Tables</li>
-                
-               </ul>
-             </div>
-           </div>
-         </div>
-   
-         <div class="iteams">
-           <div class="card">
-             <div class="heads">
-               <h1>pro-Spark-Azure</h1>
-             </div>
-             <div class="card-body">
-               <ul>
-                 <li>Develop connectors to ADLS, Azure Synapse, Azure Databricks</li>
-                 <li>
-                   Design and implement RBAC using Access Keys and SSA Tokens
-                  </li>
-                 <li>  
-                   Design Data Lake with ADLS</li>
-                 <li>     
-                   Create Azure Databricks Spark Cluster
-                 </li>
-                 <li>   
-                   Query External Tables using Azure Synapse Analytics</li>
-               </ul>
-             </div>
-           </div>
-         </div>
-       </div>
+            <div class="iteams">
+              <div class="card">
+                <div class="heads">
+                  <h1>pro-Spark-Azure</h1>
+                </div>
+                <div class="card-body">
+                  <ul>
+                    <li>Develop connectors to ADLS, Azure Synapse, Azure Databricks</li>
+                    <li>
+                      Design and implement RBAC using Access Keys and SSA Tokens
+                      </li>
+                    <li>  
+                      Design Data Lake with ADLS</li>
+                    <li>     
+                      Create Azure Databricks Spark Cluster
+                    </li>
+                    <li>   
+                      Query External Tables using Azure Synapse Analytics</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+      
+          </div>
+        </div>
 
+        <div class="body_layout_mob">
+  
+          <owl-carousel-o [options]="customOptions">
+          <ng-template carouselSlide>
+            <div class="iteams">
+              <div class="card">
+                <div class="heads">
+                  <h1>pro-Spark-AWS</h1>
+                </div>
+                <div class="card-body">
+                  <ul class="ul-item">
+                    <li>Develop connectors to Amazon S3, AWS EMR</li>
+                    <li>
+                      Design and implement EC 2 and RBAC using IAM
+                  
+                    </li>
+                    <li>   Design Data Lake with Amazon S3
+                      
+                    </li>
+                    <li> Create AWS EMR Spark Cluster
+                      
+                      </li>
+                    <li>Query External Tables using Amazon Athena</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            </ng-template>
+            <ng-template carouselSlide>
+            <div class="iteams">
+              <div class="card">
+                <div class="heads">
+                  <h1>pro-Spark-GCP</h1>
+                </div>
+                <div class="card-body">
+                  <ul>
+                    <li>Develop connectors to Google Cloud Storage, BigQuery, Dataproc</li>
+                    <li>
+                      Design and implement RBAC using Service Account creation in IAM
+                    </li>
+                    <li>
+                      
+                      Design Data Lake with Google Cloud Storage
+            
+                    </li>
+                    <li>          
+                      Create Google Dataproc Spark Cluster</li>
+                    <li>                     
+                      Query results in BigQuery Tables</li>
+                  
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </ng-template>
 
-    </div>
+          <ng-template carouselSlide>
+            <div class="iteams">
+              <div class="card">
+                <div class="heads">
+                  <h1>pro-Spark-Azure</h1>
+                </div>
+                <div class="card-body">
+                  <ul>
+                    <li>Develop connectors to ADLS, Azure Synapse, Azure Databricks</li>
+                    <li>
+                      Design and implement RBAC using Access Keys and SSA Tokens
+                    </li>
+                    <li>  
+                      Design Data Lake with ADLS</li>
+                    <li>     
+                      Create Azure Databricks Spark Cluster
+                    </li>
+                    <li>   
+                      Query External Tables using Azure Synapse Analytics</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+          </owl-carousel-o>
+        
+      </div>
+
     <div class="button">
 
       <a href="../../assets/SanKir-Courses-Brochure-v2-0.pdf" download> Download SanKir Courses Brochure</a>
