--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -1,13 +1,16 @@
+
+
 @mixin head {
   padding-bottom: 2rem;
   h1 {
     font-family: "Poppins", sans-serif;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: 400;
+    font-weight: 600;
     color: $primary-background-color;
     letter-spacing: 0;
     text-align: center;
+    font-size: 2em;
+    line-height: 1.5em;
+    padding-bottom: 1em;
   }
 }
 @mixin card_head {
